[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kagglekit"
version = "0.1.0"
description = "Battle-tested machinery for maximizing private leaderboard score in ML competitions: fold management, fold-safe encoding, metric-optimal decision rules, bagged ensembling, leakage checks, and experiment tracking."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Amer Hussein"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/amerob/kaggle-competitor"

[tool.setuptools.packages.find]
where = ["src"]
